pulse_final_v2.log
file:///Users/nandadulaldutta/Documents/New%20project/blogspro/scripts/generate-institutional-tome.js:9
  getGlobalNews,
  ^^^^^^^^^^^^^
SyntaxError: The requested module './lib/storage-bridge.js' does not provide an export named 'getGlobalNews'
    at #asyncInstantiate (node:internal/modules/esm/module_job:319:21)
    at async ModuleJob.run (node:internal/modules/esm/module_job:422:5)
    at async onImport.tracePromise.__proto__ (node:internal/modules/esm/loader:639:26)
    at async asyncRunEntryPointWithESMLoader (node:internal/modules/run_main:101:5)

Node.js v25.8.1
